[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmChatbot"
version = "0.0.1"
authors = [
  { name="Loïc Niederhauser", email="loic.niederhauser@epfl.ch" }
]
description = "A package containing a simple chatbot using the GPT API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]